Agregado: Mapale y Milu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Adios mundo cruel</h2>
     <h2>Adios mundo cruel</h2>
     <h2>Adios mundo cruel</h2>
-    <h2>Adios mundo cruel</h2>
-    <h2>Adios mundo cruel</h2>
+    <h2>Adios mundo mapale</h2>
+    <h2>Adios mundo milu</h2>
 </body>
 </html>
