--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hola Mundo.</title>
+    <title>Hello world - AngelitaOOO</title>
 </head>
 <body>
     <h1>Hola Mundo</h1>
